git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "3d85453"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "3d85453"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -256,7 +256,30 @@ attach to the outer routine.
 
 =head1 Defining Operators
 
-TODO
+Operators are just subroutines with funny names. The funny names are composed
+of the category name (C<infix>, C<prefix>, C<postfix>, C<circumfix>,
+C<postcircumfix>), followed by a colon, and a list of the operator name or
+names (two components in the case of circumfix and postcircumfix).
+
+This works both for adding multi candidates to existing operators, and for
+defining new ones. In the latter case, the definition of the new subroutine
+automatically installs the new operator into the grammar, but only in the
+current lexical scope. Importing an operator via C<use> or C<import> also
+makes it available.
+
+=begin code
+# adding a multi candidate to an existing operator:
+multi infix:<+>(Int $x, "same") { 2 * $x };
+say 21 + "same",            # 42
+
+# defining a new operator
+sub postfix:<!>(Int $x where { $x >= 0 }) { [*] 1..$x };
+say 6!;                     # 720
+=end code
+
+=begin comment
+TODO: elaborate on (post)circumfix ops
+=end comment
 
 =head2 Precedence
 
