--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -677,7 +677,7 @@ These two regexes are equivalent:
 Whereas these two are not:
 
     my $rx3 = rx/a :i b/;   # matches only the b case insensitively
-    my $rx4 = rx/:i a b/;   # matches completly case insensitively
+    my $rx4 = rx/:i a b/;   # matches completely case insensitively
 
 Brackets and parentheses limit the scope of an adverb:
 
