--- a/perl6/doc/lib/Language/terms.pod
+++ b/perl6/doc/lib/Language/terms.pod
@@ -48,7 +48,7 @@ constructs a L<Num> with value C<3 * 10**8>.
     'I\'m escaped!'
     "I don't need to be"
     "\"But I still can be,\" he said."
-    q|Other delimters can be used too!|
+    q|Other delimiters can be used too!|
 
 String literals are most often created with C<'> or C<">, however strings
 are actually a powerful sub-language of Perl 6. See L<Quoting Constructs>.
