--- a/perl6/doc/lib/Type/Capture.pod
+++ b/perl6/doc/lib/Type/Capture.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Argument list suitable for passing to a Signature
 
-    class Capture does Positonal does Associative { }
+    class Capture does Positional does Associative { }
 
 A Capture is a container for passing arguments to a code object.  Captures
 are the flip-side of Signatures -- Captures at the caller define arguments,
