--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -414,13 +414,20 @@ leading and trailing whitespace stripped.
     my $stripped = '  abc '.trim-trailing;
     say "<$stripped>";          # <  abc>
 
+=head2 method IO
+
+    method IO() returns IO::Path:D
+
+Coerces the invocant to L<IO::Path>.
+
+    .say for '.'.IO.dir;        # gives a directory listing
 
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis, roots, log10,
 unpolar, truncate, fmt, substr, substr-rw, uc, lc, tc,
 tclc, wordcase, chomp, chop, chrs, trans, index, rindex, ords,
-split, match, comb, lines, words, subst, sprintf, printf, samecase, path,
+split, match, comb, lines, words, subst, sprintf, printf, samecase,
 EVAL
 
 =end comment
