--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -348,7 +348,7 @@ L<permissions|http://en.wikipedia.org/wiki/File_system_permissions#Traditional_U
 specified as an integer (thought still subject to
 L<umask|http://en.wikipedia.org/wiki/Umask>).
 
-Throws an excpetion of type L<X::IO::Mkdir|/type/X::IO::Mkdir> if the
+Throws an exception of type L<X::IO::Mkdir|/type/X::IO::Mkdir> if the
 directory cannot be created.
 
 =head2 sub run
