--- a/perl6/doc/lib/Type/Match.pod
+++ b/perl6/doc/lib/Type/Match.pod
@@ -31,9 +31,13 @@ Returns the index of the starting position of the match.
 
 Returns the index of the end position of the match.
 
+=head2 method made
+
+Returns the payload that was set with L<#method make>.
+
 =head2 method ast
 
-Returns the AST (i.e. payload).
+Alias for L<#method made>.
 
 =head2 method Str
 
