--- a/perl6/doc/lib/Type/X/Augment/NoSuchType.pod
+++ b/perl6/doc/lib/Type/X/Augment/NoSuchType.pod
@@ -6,7 +6,7 @@
 
     class X::Augment::NoSuchType does X::Comp { }
 
-Thrown when trying to agument a type which doesn't exist.
+Thrown when trying to augment a type which doesn't exist.
 
 For example
 
