--- a/perl6/doc/lib/Type/X/IO/Cwd.pod
+++ b/perl6/doc/lib/Type/X/IO/Cwd.pod
@@ -6,7 +6,7 @@
 
     class X::IO::Cwd does X::IO is Exception { }
 
-Error class when the runtime fails to deterine the current directory.
+Error class when the runtime fails to determine the current directory.
 
 A typical error message is
 
