--- a/perl6/doc/lib/Type/X/Phaser/Multiple.pod
+++ b/perl6/doc/lib/Type/X/Phaser/Multiple.pod
@@ -22,6 +22,6 @@ Produces
 
 =head2 method block
 
-Returns the name of the phaser that occured more than once.
+Returns the name of the phaser that occurred more than once.
 
 =end pod
