--- a/perl6/doc/lib/Type/X/Syntax/Augment/Role.pod
+++ b/perl6/doc/lib/Type/X/Syntax/Augment/Role.pod
@@ -6,7 +6,7 @@
 
     class X::Syntax::Augment::Role does X::Syntax { }
 
-Compile time error thrown when trying to agument a role.
+Compile time error thrown when trying to augment a role.
 
 For example
 
