git subrepo clone --force git://github.com/FROGGS/p6-JSON-Pretty.git FROGGS/p6-JSON-Pretty
subrepo:
  subdir:   "FROGGS/p6-JSON-Pretty"
  merged:   "739ce65"
upstream:
  origin:   "git://github.com/FROGGS/p6-JSON-Pretty.git"
  branch:   "master"
  commit:   "739ce65"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/FROGGS/p6-JSON-Pretty/README
+++ b/FROGGS/p6-JSON-Pretty/README
@@ -1,5 +1,5 @@
 A simple Perl 6 module for serializing and deserializing JSON.
-This is atually a fork of JSON::Tiny [1], with the difference that produced
+This is actually a fork of JSON::Tiny [1], with the difference that produced
 JSON is indented. Its goal is to be readable especially for debugging
 purposes. This module exposes the same API as JSON::Tiny, so all you have
 to do to switch between both is to change your "use" statement.
