git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "a7d5119"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "a7d5119"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -419,6 +419,24 @@ Another thing to note is that the name C<new> is not special in Perl 6. It
 is merely a common convention. You can call C<bless> from any method at all,
 or use C<CREATE> to fiddle around with low-level workings.
 
+Another pattern of hooking into object creation is by writing your own method
+C<BUILDALL>. To make sure that initialization of superclasses works fine, you
+need to C<callsame> to invoke the parent classes C<BUILDALL>.
+
+=begin code
+class MyClass {
+    method BUILDALL(|) {
+        # initial things here
+
+        callsame;   # call the parent classes (or default) BUILDALL
+
+        # you can do final checks here.
+    }
+}
+=end code
+
+=comment TODO: better example for BUILDALL overriding
+
 =head1 X<Roles|declarator,role>
 
 Roles are in some ways similar to classes, in that they are a collection of
