--- a/perl6/doc/lib/Type/Metamodel/MethodContainer.pod
+++ b/perl6/doc/lib/Type/Metamodel/MethodContainer.pod
@@ -44,10 +44,17 @@ If C<:local> is set, only methods declared directly in the class are returned.
 The returned list contains objects of type L<Method>, which you can
 use to introspect their signatures and call them.
 
+=head2 method method_table
+
+    method method_table(Metamodel::MethodContainer:D: $obj) returns Hash:D
+
+Returns a hash where the keys are method names, and the values are
+L<methods|/type/Method>. Note that the keys are the names by which the methods
+can be called, not necessarily the names by which the methods know themselves.
+
 =begin comment
 
-TODO: method_table, submethod_table, declares_method, lookup, cache,
-cache_get, cache_add
+TODO: submethod_table, declares_method, lookup, cache, cache_get, cache_add
 
 =end comment
 
