--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -19,8 +19,6 @@ return value.
 
 =head1 Defining/Creating/Using Functions
 
-TODO
-
 =head2 X<Subroutines|declarator,sub>
 
 To create a function, often all that's needed is to define a
@@ -315,7 +313,7 @@ With C<is tighter(&other-operator)> you can squeeze in an operator with a
 tighter precedence than the one you specified, but looser than the
 next-tighter precedence level.
 
-For example C<< infix:<*> >> has a tighter precedence than C<<< infix:<+> >>,
+For example C<< infix:<*> >> has a tighter precedence than C<< infix:<+> >>,
 and squeezinge one in between works like this:
 
 =begin code
@@ -336,7 +334,59 @@ The same effect could have been achieved with
 To put a new operator on the same precedence level as an existing operator,
 use C<is equiv(&other-operator)> instead.
 
-=comment TODO: is assoc
+
+=head2 Associativity
+
+When the same operator appears several times in a row, there are multiple
+possible interpretation. For example
+
+    1 + 2 + 3
+
+could be parsed as
+
+    (1 + 2) + 3         # left associative
+
+or as
+
+    1 + (2 + 3)         # right associative
+
+or as single call to an operator with three operands
+
+    infix:<+>(1, 2, 3); # list associative
+
+For addition of real numbers, the distinction is somewhat moot, because C<+> is
+L<mathematically associative|https://en.wikipedia.org/wiki/Associative_property>.
+
+But for other operators it matters a great deal. For example for the
+exponentation/power operator, C<< infix:<**> >>:
+
+    say 2 ** (2 ** 3);      # 256
+    say (2 ** 3) ** 3;      # 64
+
+Perl 6 has the following possible associativity configurations:
+
+=begin table
+
+    A   Assoc     Meaning of $a ! $b ! $c
+    =   =====     =======================
+    L   left      ($a ! $b) ! $c
+    R   right     $a ! ($b ! $c)
+    N   non       ILLEGAL
+    C   chain     ($a ! $b) and ($b ! $c)
+    X   list      infix:<!>($a; $b; $c)
+
+=end table
+
+You can specify the associativity of an operator with the C<is assoc> trait,
+where C<left> is the default associativity.
+
+=begin code
+sub infix:<§>(*@a) is assoc<list> {
+    '(' ~ @a.join('|') ~ ')';
+}
+
+say 1 § 2 § 3;      # (1|2|3)
+=end code
 
 =head1 Traits
 
@@ -353,6 +403,9 @@ Examples of traits are:
     #               ^^^^ trait
     has $another-attribute handles <close>;
     #                      ^^^^^^^ trait
+
+... and also C<is tighter>, C<is looser>, C<is equiv> and C<is assoc> from the previous
+section.
 
 Traits are subs of the form C<< trait_mod<VERB> >>, where C<VERB> stands for the
 name like C<is>, C<does> or C<handles>. It receives the modified thing as
@@ -374,5 +427,81 @@ say square 3;       # 18
 
 See L<type Routine|/type/Routine> for the documentation of built-in routine
 traits.
+
+=head1 Re-dispatching
+
+There are cases in which a routine might want to call the next method
+from a chain. This chain could be a list of parent classes in a class
+hierarchy, or it could be less specific multi candidates from a multi
+dispatch, or it could be the inner routine from a C<wrap>.
+
+In all those cases, you can use C<callwith> to call the next routine in the
+chain with arguments of your own choice.
+
+For example
+
+=begin code
+multi a(Any $x) {
+    say "Any $x";
+    return 5;
+}
+multi a(Int $x) {
+    say "Int $x";
+    my $res = callwith($x + 1);
+    say "Back in Int with $res";
+}
+
+a 1;
+=end code
+
+produces this output:
+
+=begin code
+Int 1
+Any 2
+Back in Int with 5
+=end code
+
+Here C<a 1> calls the most specific C<Int> candidate first, and C<callwith>
+re-dispatches to the less specific C<Any> candidate.
+
+Very often, a re-dispatch passes the same argument along that the caller
+received, so there is a special routine for that: C<callsame>.G
+
+=begin code
+multi a(Any $x) {
+    say "Any $x";
+    return 5;
+}
+multi a(Int $x) {
+    say "Int $x";
+    my $res = callsame;
+    say "Back in Int with $res";
+}
+
+a 1;        # Int 1\n Any 1\n Bakc in Int with 5
+=end code
+
+Another common use case is to re-dispatch to the next routine in the chain,
+and not do anything else aftwards. That's why we have C<nextwith> and
+C<nextsame>, which call the next routine with arbitrary arguments
+(C<nextwith>) or with the same argument as the caller received (C<nextsame>),
+but never return to the caller. Or to phrase it differently, the C<nextsame>
+and C<nextwith> variants replace the current callframe with the next
+candidate.
+
+=begin code
+multi a(Any $x) {
+    say "Any $x";
+    return 5;
+}
+multi a(Int $x) {
+    say "Int $x";
+    nextsame;
+    say "back in a";    # never executed, because 'nextsame' doesn't return
+}
+
+a 1;        # Int 1\n Any 1
+=end code
 
 =end pod
