git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "738d615"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "738d615"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/IO/FileTestable.pod
+++ b/perl6/doc/lib/Type/IO/FileTestable.pod
@@ -10,10 +10,10 @@
 
 =head2 File Test operators
 
-X<-e> X<:-f>
+X<-e> X<-f>
 
-    -e
-    -f Does not exist in Perl 6. See :e, :f.
+The C<-e> and C<-f> file test operators do not exist in Perl 6. Use instead
+C<:e> and C<:f>.
 
 X<-M> X<-A> X<-C>
 
