--- a/perl6/doc/lib/Language/io.pod
+++ b/perl6/doc/lib/Language/io.pod
@@ -16,7 +16,7 @@ To read in the contents of a file one could open the file via the C<open>
 function with the C<:r> (read) file mode option and slurp in the contents:
 
     my $fh = open "testfile", :r;
-    my $contents = $fh.slurp;
+    my $contents = $fh.slurp-rest;
     $fh.close;
 
 where we explicitly close the file handle using the C<close> method on the
@@ -25,6 +25,8 @@ contents of a file.  However, we can do the same much more easily and
 clearly like so:
 
     my $contents = "testfile".IO.slurp;
+    # or in procedural form:
+    my $contents = slurp "testfile"
 
 By adding the C<IO> role to the file name string, we are effectively able to
 refer to the string as the file object itself and thus slurp in its
@@ -73,21 +75,21 @@ exist.  So, how do we know that the file even exists before reading it?
 This is what the C<e> method on an C<IO::Handle> object is for.
 
     if "nonexistent_file".IO.e {
-	say "file exists";
+        say "file exists";
     }
     else {
-	say "file doesn't exist";
+        say "file doesn't exist";
     }
 
 It is also possible to use the colon pair syntax to achieve the same thing:
 
     if "path/to/file".IO ~~ :e {
-	say 'file exists';
+        say 'file exists';
     }
 
     my $file = "path/to/file";
     if $file.IO ~~ :e {
-	say 'file exists';
+        say 'file exists';
     }
 
 Similarly to the file existence check, one can also check to see if a path
@@ -113,7 +115,7 @@ the file test method C<f>:
 =head1 Getting a directory listing
 
 To list the files and directories in the current directory, one merely needs
-to use the C<dir> function.  This returns a list of C<IO::Path> objects one
+to use the C<dir> function.  This returns a list of L<IO::Path> objects one
 can then write to, read from etc.
 
     say dir;    # "/path/to/testfile".IO "/path/to/lib".IO
@@ -147,3 +149,5 @@ TODO: http://doc.perl6.org/type/IO::Handle has close but no open
 =end comment
 
 =end pod
+
+# vim: expandtab
