--- a/perl6/doc/lib/Language/testing.pod
+++ b/perl6/doc/lib/Language/testing.pod
@@ -326,12 +326,12 @@ The function accepts an optional C<$description> of the test.
 		    die "Oops, Khaleesi now ashes" if $daenerys_burns],
 	"Dany is blood of the dragon";
 
-=item throws_like($code, $description?)
+=item throws_like($code, $ex_type, $description?)
 
 The C<throws_like> function checks whether the given C<$code> (specified as
 either something C<Callable>, or as a something to be C<EVAL>led) throws a
-specific exception (either specified as a Type object, or as a string).  If
-an exception was thrown, it will also try to match the matcher hash, in
+specific exception (either specified as a C<Type> object, or as a string).
+If an exception was thrown, it will also try to match the matcher hash, in
 which the key is the name of the method to be called on the exception, and
 the value is the value it should have to pass.
 
