--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -28,7 +28,7 @@ displays
     Hi there!How are you?
 
 To print text implicitly including the trailing newline character, use
-L<say|type/IO#sub say>.
+L<say|/type/IO#sub_say>.
 
 =head2 sub say
 
@@ -221,7 +221,7 @@ C<.lines> and C<.get>.  Defaults to C<True>.
 =head2 method close
 
 To close an open file handle, simply call its
-L<close|/type/IO::Handle#method close> method:
+L<close|/type/IO::Handle#method_close> method:
 
     my $fh = open("path/to/file");
     # ... do stuff with the file
