--- a/perl6/doc/lib/Type/X/Attribute/Undeclared.pod
+++ b/perl6/doc/lib/Type/X/Attribute/Undeclared.pod
@@ -1,6 +1,6 @@
 =begin pod
 
-=title class X::Attribute::Undeclared
+=TITLE class X::Attribute::Undeclared
 
 =SUBTITLE Compilation error due to an undeclared attribute
 
