--- a/perl6/doc/lib/Type/X/Placeholder/Block.pod
+++ b/perl6/doc/lib/Type/X/Placeholder/Block.pod
@@ -1,6 +1,6 @@
 =begin pod
 
-=TITLE class X::Placeholder
+=TITLE class X::Placeholder::Block
 
 =SUBTITLE Compilation error due to a placeholder in an uneligible block
 
