git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "3606e95"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "3606e95"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/grammars.pod
+++ b/perl6/doc/lib/Language/grammars.pod
@@ -212,7 +212,7 @@ as an argument.
 
 To make it clear that the argument is a match object, the example uses C<$/>
 as a parameter name to the action method, though that's just a handy
-convention, notthing intrinsic. C<$match> would have worked too. (Though using
+convention, nothing intrinsic. C<$match> would have worked too. (Though using
 C<$/> does give the advantage of providing C<< $<capture> >>> as a shortcut
 for C<< $/<capture> >>).
 
