--- a/perl6/doc/lib/Language/testing.pod
+++ b/perl6/doc/lib/Language/testing.pod
@@ -171,21 +171,29 @@ a test as passed if the given condition evaluates to C<False>.
 
 =item is($obtained, $expected, $description?)
 
-Marks a test as passed if the C<$obtained> and C<$expected> values are equal
-when coerced to strings (i.e., they compare as equal when using the
-L<eq operator|/routine/eq>).  The function
+Marks a test as passed if the C<$obtained> and C<$expected> values are equal.
+If C<$expected> is a type object, then the comparison operator is C<===>.
+If C<$expected> is defined, then C<$obtained> and C<$expected> are coerced
+to strings and compared using the L<eq operator|/routine/eq>).  The function
 accepts an optional C<$description> of the test.
 
     my $pi = 3;
     is($pi, 3, 'The variable $pi equals 3');
 
+    my Int $a;
+    is $a, Int, 'The variable $a is an unassigned Int';
+
 =item isnt($obtained, $expected, $description?)
 
 Marks a test as passed if the C<$obtained> and C<$expected> values are
-B<not> equal (i.e., they compare as B<not> equal when using the C<'eq'>
-operator).  The function accepts an optional C<$description> of the test.
+B<not> equal using the same rules as C<is()>.  The function accepts an
+optional C<$description> of the test.
 
     isnt(pi, 3, 'The constant π is not equal to 3');
+
+    my Int $a = 23;
+    $a = Nil;
+    isnt $a, Nil, 'Nil should not survive being put in a container';
 
 =item cmp_ok($obtained, $comparison, $expected, $description?)
 
