--- a/perl6/doc/lib/Type/Any.pod
+++ b/perl6/doc/lib/Type/Any.pod
@@ -63,4 +63,12 @@ list.
 
 Interprets the invocant as a list, and returns the last index of that list.
 
+=head2 sub exit
+
+    sub exit(Int() $status = 0)
+
+Exits the current process with return code C<$status>.
+
+=comment TODO maybe find a better place to document &exit
+
 =end pod
