--- a/perl6/doc/lib/Type/IO/Handle.pod
+++ b/perl6/doc/lib/Type/IO/Handle.pod
@@ -43,6 +43,16 @@ Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lin
         @data.push($line.split(','))
     }
 
+=head2 method print
+
+    method print(*@text --> Bool)
+
+Text writing; writes the given C<@text> to the filehandle.
+
+    my $fh = open 'path/to/file', :w;
+    $fh.print("some text\n");
+    $fh.close;
+
 =head2 method read
 
     method read(IO::Handle:D: Int(Cool:D) $bytes --> Blob)
@@ -71,3 +81,4 @@ Will close a previously opened filehandle.
 
 =end pod
 
+# vim: expandtab shiftwidth=4 ft=perl6
