--- a/perl6/doc/lib/Type/List.pod
+++ b/perl6/doc/lib/Type/List.pod
@@ -254,11 +254,12 @@ Examples:
     my $random_digits := (^10).roll(*);
     say $random_digits[^15];    # 3 8 7 6 0 1 3 2 0 8 8 5 8 0 5
 
-=head2 method eager
+=head2 routine eager
 
     multi method eager(List:D:) returns List:D
+    sub eager(*@elems) returns List:D
 
-Evaluates all elements in the list eagerly, and returns the invocant.
+Evaluates all elements in the list eagerly, and returns them as a list.
 If a List signals that it is "known infinite", eager evaluation may
 stop at the point where the infinity is detected.
 
