--- a/perl6/doc/lib/Type/Metamodel/C3MRO.pod
+++ b/perl6/doc/lib/Type/Metamodel/C3MRO.pod
@@ -31,7 +31,7 @@ Note that roles generally do not appear in the method resolution order (unless
 they are punned into a class, from which another type inherits), because
 methods are copied into classes at role application time.
 
-=head1 METHODS
+=head1 Methods
 
 =head2 compute_mro
 
