--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -4,14 +4,28 @@
 
 =SUBTITLE How do I do what I used to do?
 
-This article indexes the changes in syntax from Perl 5 to Perl 6.
-Whatever worked in Perl 5, that *must* now be written differently in Perl 6, should be listed here.
+This page attempts to index the changes in syntax and semantics from
+Perl 5 to Perl 6. Whatever worked in Perl 5 and must be written differently
+in Perl 6, should be listed here.
 
-B<NOTE>: Automated translation might be faster than searching here, even
-though this document is optimized for your searches.
-See the L<Automated Translation> section at the bottom.
+It should not be mistaken for a beginner tutorial or a promotional
+overview of Perl 6; it is intended as a technical reference for Perl 6
+learners with a strong Perl 5 background and for anyone porting Perl 5 code
+to Perl 6 (though note that L<#Automated Translation> might be more
+convenient).
 
-
+A note on semantics; when we say "now" in this document, we mostly just
+mean "now that you are trying out Perl 6."  We don't mean to imply that
+Perl 5 is now suddenly obsolete.  Quite the contrary, most of us love
+Perl 5, and we expect Perl 5 to continue in use for a good many years.
+Indeed, one of our more important goals has been to make interaction between
+Perl 5 and Perl 6 run smoothly.  However, we do also like the design
+decisions in Perl 6, which are certainly newer and arguably better
+integrated than many of the historical design decisions in Perl 5.
+So many of us do hope that over the next decade or two, Perl 6 will
+become the more dominant language.  If you want to take "now" in that
+future sense, that's okay too.  But we're not at all interested in the
+either/or thinking that leads to fights.
 
 
 =head2 CPAN
@@ -22,104 +36,249 @@ If the module that you were using has not been converted to Perl 6, and no
 alternative is listed in this document, then its use under Perl 6 may not
 have been addressed yet.
 
-We hope that soon, the Perl 6 compilers will support the C<use> of Perl 5
-modules directly within Perl 6 code.
+There are multiple projects aiming to make it possible to C<use> Perl 5
+modules directly from Perl 6 code:
 
+=defn  L<v5|https://github.com/rakudo-p5/v5/>
+A slang that lets Rakudo itself parse blocks of Perl 5 code, and compile
+them to the same bytecode that it compiles Perl 6 code to.
+
+=defn  L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>
+Uses an embedded instance of the C<perl> interpreter to run Perl 5 code
+called from your Perl 6 script.
+
+Of these, Inline::Perl5 is currently the furthest along and the most
+promising.
 
 
 
 
 =head2 Syntax
 
+=head3 C«->» Method calls
+
+If you've read any Perl 6 code at all, it's immediately obvious that
+method call syntax now uses a dot instead of an arrow:
+
+    $person->name  # Perl 5
+    $person.name   # Perl 6
+
+The dot notation is both easier to type and more of an industry standard.
+But we also wanted to steal the arrow for something else.  (Concatenation
+is now done with the C<~> operator, if you were wondering.)
+
+To call a method whose name is not known until runtime:
+
+    $object->$methodname(@args);  # Perl 5
+    $object."$methodname"(@args); # Perl 6
+
+If you leave out the quotes, then Perl 6 expects C<$methodname> to contain
+a C<Method> object, rather than the simple string name of the method.
+
 =head3 Whitespace
 
-Perl 5 allows a surprising amount of flexibility in the use of whitespace.
-This is sometimes abused by humans, reducing readability, and causing
-surprises for programmers trying to read each others code. More
-importantly, it requires a convoluted (and difficult to maintain)
-lexer/parser in the source of Perl itself.
+Perl 5 allows a surprising amount of flexibility in the use of whitespace,
+even with strict mode and warnings turned on:
+
+    # unidiomatic but valid Perl 5
+    say"Hello ".ucfirst  ($people
+        [$ i]
+        ->
+        name)."!"if$greeted[$i]<1;
+
+Perl 6 also endorses programmer freedom and creativity, but balanced
+syntactic flexibility against its design goal of having a consistent,
+deterministic, extensible grammar that supports single-pass parsing and
+helpful error messages, integrates features like custom operators cleanly,
+and doesn't lead programmers to accidentally misstate their intent.
+Also, the practice of "code golf" is slightly de-emphasized; Perl 6 is
+designed to be more concise in concepts than in keystrokes.
+
+As a result, there are various places in the syntax where whitespace is
+optional in Perl 5, but is either mandatory or forbidden in Perl 6. Many of
+those restrictions are unlikely to concern much real-life Perl code (e.g.
+whitespace being disallowed between the sigil and name of a variable), but
+there are a few that will unfortunately conflict with some Perl hackers'
+habitual coding styles:
+
+=begin item
+I<No space allowed before the opening parenthesis of an argument list.>
+
+    substr ($s, 4, 1); # Perl 5 (in Perl 6 this would try to pass a single
+                       #         argument of type List to substr)
+    substr($s, 4, 1);  # Perl 6
+    substr $s, 4, 1;   # Perl 6 - alternative parentheses-less style
+
+=end item
+
+=begin item
+I<No space allowed after a prefix operator, or before a
+postfix/postcircumfix operator (including array/hash subscripts).>
+
+    $seen {$_} ++; # Perl 5
+    $seen{$_}++;   # Perl 6
+=end item
+
+=begin item
+I<No space allowed around the method call operator.>
+
+    $customer -> name; # Perl 5
+    $customer.name;    # Perl 6
+=end item
+
+=begin item
+I<Space required before an infix operator if it would
+conflict with an existing postfix/postcircumfix operator.>
+
+    $n<1;   # Perl 5 (in Perl 6 this would conflict with postcircumfix < >)
+    $n < 1; # Perl 6
+
+=end item
+
+However, note that you can use L<unspace|http://design.perl6.org/S02.html#Unspaces>
+to add whitespace in Perl 6 code in places where it is otherwise not
+allowed:
 
     # Perl 5
-    perl -wE '$z+=$_ for@ARGV;say$z;' 4 5 16
-    25
-    perl -wE '$z = [ 1, 5, 25 ]; say $z
-            ->
-        [2]
-    '
-    25
+    my @books = $xml->parse_file($file)          # some comment
+                    ->findnodes("/library/book");
 
-Perl 6 has stricter (and more regular) rules about whitespace.
+    # Perl 6
+    my @books = $xml.parse-file($file)\          # some comment
+                    .findnodes("/library/book");
 
-If you have translated your Perl 5 code into Perl 6 by hand, and a compile error is thrown where you expect it to work, examine your use of whitespace.
-
-See the S03/"Minimal whitespace DWIMmery" and the last paragraph of S04/"Statement parsing".
+See also L<S03#Minimal whitespace
+DWIMmery|http://design.perl6.org/S03.html#Minimal_whitespace_DWIMmery> and
+L<S04#Statement parsing|http://design.perl6.org/S04.html#Statement_parsing>
+in the Perl 6 design docs.
 
 
 =head3 Sigils
 
-In Perl 5, arrays and hashes used changing sigils according to how they were being read:
+In Perl 5, arrays and hashes use changing sigils depending on how they are
+being accessed. In Perl 6 the sigils are invariant, no matter how the
+variable is being used - you can think of them as part of the variable's
+name.
 
-C<$> for scalars or single elements of an array or a hash.
-
-C<@> for entire arrays  or   slices of an array or a hash.
-
-C<%> for entire hashes.
-
-In Perl 6, sigils are invariant, no matter how the variable is being used.
-
-See also L<Dereferencing>.
+(See also L<#Dereferencing>).
 
 =head4 C<$> Scalar
 
-Unchanged.
+In Perl 6, the C<$> sigil is always used with "item" variables (e.g.
+C<$name>), and no longer for:
+
+=begin item
+I<Indexing an array variable>
+
+    say $months[2]; # Perl 5
+    say @months[2]; # Perl 6 - $ becomes @
+=end item
+
+=begin item
+I<Indexing a hash variable>
+
+    say $calories{apple}; # Perl 5
+    say %calories<apple>; # Perl 6 - $ becomes %
+=end item
 
 =head4 C<@> Array
 
-    # Retrieving a single element
-    say $months[2]; # Perl 5
-    say @months[2]; # Perl 6; $ became @
+In Perl 6, the C<@> sigil is always used with "array" variables
+(e.g. C<@months>, C<@months[2]>), including for:
 
-    # Retrieving multiple elements (a "slice")
-    say join ',', @months[ 6, 8..11 ]; # Perl 5
-    say join ',', @months[ 6, 8..11 ]; # Perl 6; no change
+=begin item
+I<Value-slicing an array variable>
+
+    say join ',', @months[6, 8..11]; # Perl 5 and Perl 6
+=end item
+
+But no longer for:
+
+=begin item
+I<Value-slicing a hash variable>
+
+    say join ',', @calories{'pear', 'plum'}; # Perl 5
+    say join ',', %calories<pear plum>;      # Perl 6 - @ becomes %
+=end item
 
 =head4 C<%> Hash
 
-    # Retrieving a single element
-    say $calories{'apple'}; # Perl 5
-    say %calories{'apple'}; # Perl 6; $ became %
+In Perl 6, the C<%> sigil is always used with "hash" variables
+(e.g. C<%calories>, C<%calories<apple>>), including for:
 
-    # Retrieving multiple elements (a "slice")
-    say join ',', @calories{'pear', plum'}; # Perl 5
-    say join ',', %calories{'pear', plum'}; # Perl 6; @ became %
+=begin item
+I<Key/value-slicing a hash variable>
+
+    say join ',', %calories{'pear', 'plum'}; # Perl 5
+    say join ',', %calories<pear plum>:kv;   # Perl 6 - slice controlled by adverb
+=end item
+
+But no longer for:
+
+=begin item
+I<Key/value-slicing an array variable>
+
+    say join ',', %months[6, 8..11];    # Perl 5
+    say join ',', @months[6, 8..11]:kv; # Perl 6 - % becomes @; slice controlled by adverb
+=end item
 
 =head4 C<&> Sub
 
-In Perl 5, using an ampersand as a sigil on a sub call turns off prototype
-checking for that call. This is a subtle behavior that is very rarely
-needed.
+In Perl 6, the C<&> sigil is used consistently (and without the help of
+a backslash) to refer to the function object of a named subroutine/operator
+without invoking it, i.e. to use the name as a "noun" instead of a "verb":
 
-    # This call will respect the sub's prototype, if it has one.
-    read_the_meter($customer_number);
-    # This call will ignore the sub's prototype, if it has one.
-    &read_the_meter($customer_number); # Probably not what the coder really meant to do!
+    my $sub = \&foo; # Perl 5
+    my $sub = &foo;  # Perl 6
 
-However, prototypes themselves are rarely used in Perl 5, so such use of
-the ampersand is often harmless, and commonly seen in code in the wild,
-even though such use is incorrect and to be strongly discouraged.
+    callback => sub { say $_ }  # Perl 5 - can't pass built-in sub directly
+    callback => &say            # Perl 6 - & gives "noun" form of any sub
 
-In Perl 6, the ampersand sigil is used to distinguish verb from noun; that
-is, the sub being invoked as a call, versus a simple reference to the sub's
-code.
+Since Perl 6 does not allow adding/removing symbols in a lexical scope once
+it has finished compiling, there is no equivalent to Perl 5's
+C<undef &foo;>, and the closest equivalent to Perl 5's C<defined &foo>
+would be C<defined &::("foo")> (which uses the "dynamic symbol lookup"
+syntax). However, you can declare a mutable named subroutine with
+C<my &foo;> and then change its meaning at runtime by assigning to C<&foo>.
 
-    my $result =  read_all_meters(); # Perl 5; correct
-    my $result =  read_all_meters(); # Perl 6; identical
-    my $result = &read_all_meters(); # INCORRECT; it does not always work in Perl 5, and it is a error in Perl 6.
+In Perl 5, the ampersand sigil can additionally be used to call subroutines
+in special ways with subtly different behavior compared to normal sub
+calls. In Perl 6 these special forms are no longer available:
 
-    my $subref = \&read_all_meters; # Perl 5
-    my $subref =  &read_all_meters; # Perl 6
+=begin item
+C<&foo(...)> I<for circumventing a function prototype>
+
+In Perl 6 there are no prototypes, and it no longer
+makes a difference whether you, say, pass a literal code block or a
+variable holding a code object as an argument:
+
+    # Perl 5:
+    first_index { $_ > 5 } @values;
+    &first_index($coderef, @values); # (disabling the prototype that parses a
+                                     # literal block as the first argument)
+    # Perl 6:
+    first-index { $_ > 5 }, @values;
+    first-index $coderef, @values;
+=end item
+
+=begin item
+C<&foo;> I<and> C<goto &foo;> I<for re-using the caller's argument list /
+replacing the caller in the call stack>
+
+    sub foo { say "before"; &bar;     say "after" } # Perl 5
+    sub foo { say "before"; bar(|@_); say "after" } # Perl 6 - have to be explicit
+
+    # TODO: Suggest .callsame once it has been implemented in Rakudo.
+
+    sub foo { say "before"; goto &bar } # Perl 5
+
+    # TODO: Suggest .nextsame and .nextwith once they've been implemented in Rakudo.
+=end item
 
 =head4 C<*> Glob
+
+=comment TODO: Research what exact use-cases still need typeglobs in Perl 5
+         today, and refactor this section to list them (with translations).
 
 In Perl 5, the C<*> sigil referred to the GLOB structure that Perl uses to
 store non-lexical variables, file handles, subs, and formats.
@@ -150,7 +309,21 @@ before translating into Perl 6.
     open my $in_file, '<', $path or die;
     my ($line1, $line2) = read_2($in_file);
 
+And here's just one possible Perl 6 translation:
+
+    # Perl 6
+    sub read-n($fh, $n) {
+        return $fh.get xx $n;
+    }
+    my $in-file = open $path or die;
+    my ($line1, $line2) = read-n($in-file, 2);
+
 =head3 Reference creation
+
+=comment TODO: Rewrite this section to make it clear that the "referencing/
+         dereferencing" metaphor does not map cleanly to the actual Perl 6
+         container system, and focus more on how one would translate or
+         replace actual code that uses references in Perl 5.
 
 In Perl 5, references to anonymous arrays and hashes and subs are returned
 during their creation. References to existing named variables and subs were
@@ -222,18 +395,13 @@ That new feature corresponds Perl 6 C<.list> and C<.hash> methods:
         my @a = $arrayref.list;
         my %h = $hashref.hash;
 
+The "Zen" slice does the same thing:
+
+    # Perl 6
+        my @a = $arrayref[];
+        my %h = $hashref{};
+
 See S32/Containers
-
-=head3 C«$object->$methodname»
-
-To call a method whose name is not known until runtime:
-
-    $object->$methodname(@args);  # Perl 5
-    $object."$methodname"(@args); # Perl 6
-
-If you leave out the quotes, then Perl 6 expects C<$methodname> to contain
-a reference to the method itself (which is a Method object), instead of the
-simple string name of the method.
 
 =head2 Operators
 
@@ -264,8 +432,8 @@ C«cmp» is now named C«leg»; it forces string context for the comparison.
 
 C«<=>» still forces numeric context.
 
-C«cmp» in Perl 6 does either C«<=>» or C<leg>, depending on the
-pre-existing context of its arguments.
+C«cmp» in Perl 6 does either C«<=>» or C<leg>, depending on the existing
+type of its arguments.
 
 =head3 C<~~> Smart-match operator
 
@@ -350,7 +518,8 @@ expect Pairs. However, this requires you to change all sub calls at once.
 
 =head3 C<? :> Ternary operator
 
-Now spelled with two question marks instead of one question mark, and two exclamation points instead of one colon.
+Now spelled with two question marks instead of one question mark, and two
+exclamation points instead of one colon.
 
     my $result = ( $score > 60 )  ? 'Pass'  : 'Fail'; # Perl 5
     my $result = ( $score > 60 ) ?? 'Pass' !! 'Fail'; # Perl 6
@@ -378,8 +547,8 @@ In Perl 5, C<x> was the Repetition operator.
 In scalar content, C<x> would repeat a string. In Perl 6, C<x> repeats
 strings in any context.
 
-In list content, C<x> would repeat a list. In Perl 6, the new C<xx> op
-repeats lists in any context.
+In list content, C<x> would repeat a list—but only if the left argument
+is parenthesized! In Perl 6, the new C<xx> op repeats lists in any context.
 
 Mnemonic: x is short and xx is long, so xx is the one used for lists.
 
@@ -405,8 +574,31 @@ translation.
 In scalar context, C<..> and C<...> were the little-known Flipflop
 operators. They have been replaced by C<ff> and C<fff>.
 
+=head2 Data Structures
 
+=head3 Arrays and Lists
 
+=head3 Hashes
+
+As mentioned above in the section on L<#Sigils>, hashes in Perl 6 are always
+prefixed with a C<%>.
+
+Some functions for manipulating hashes and querying hash values have been
+turned into adverbs:
+
+=begin item
+I<Checking for element existence in a hash>
+
+    say "element exists" if exists $hash{$key};  # Perl 5
+    say "element exists" if %hash{$key}:exists;  # Perl 6 - exists controlled by adverb
+=end item
+
+=begin item
+I<Deleting an element in a hash>
+
+    my $deleted_value = delete $hash{$key};  # Perl 5
+    my $deleted_value = %hash{$key}:delete;  # Perl 6 - delete controlled by adverb
+=end item
 
 =head2 Compound Statements
 
@@ -414,7 +606,18 @@ operators. They have been replaced by C<ff> and C<fff>.
 
 =head4 C<if> C<elsif> C<else> C<unless>
 
-Unchanged; parens around the conditions are now optional.
+Mostly unchanged; parens around the conditions are now optional, but if
+used, must not immediately follow the keyword, or it will be taken as a function
+call instead.  Binding the conditional expression to a variable is also a little different:
+
+    if (my $x = dostuff()) {...}  # Perl 5
+    if dostuff() -> $x {...}      # Perl 6
+
+(You can still use the C<my> form in Perl 6, but it will scope to the
+outer block, not the inner.)
+
+The C<unless> conditional only allows for a single block in Perl 6;
+it does not allow for an C<elsif> or C<else> clause.
 
 =head4 C<given> C<when>
 
@@ -426,7 +629,15 @@ See also the warnings on the smart-match op above.
 
 =head4 C<while> C<until>
 
-Unchanged; parens around the conditions are now optional.
+Mostly unchanged; parens around the conditions are now optional, but if
+used, must not immediately follow the keyword, or it will be taken as a function
+call instead.  Binding the conditional expression to a variable is also a little different:
+
+    while (my $x = dostuff()) {...}  # Perl 5
+    while dostuff() -> $x {...}      # Perl 6
+
+(You can still use the C<my> form in Perl 6, but it will scope to the
+outer block, not the inner.)
 
 Note that reading line-by-line from a filehandle has changed.
 
@@ -462,12 +673,15 @@ Parens are optional.
 The iteration variable, if any, has been moved from before the list, to
 after the list and an added arrow operator.
 
-The iteration variable is now always lexical; C<my> is neither needed nor allowed.
+The iteration variable is now always lexical; C<my> is neither needed nor
+allowed.
 
-In Perl 5, the iteration variable is a read-write alias to the current list element.
+In Perl 5, the iteration variable is a read-write alias to the current list
+element.
 
-In Perl 6, that alias is read-only (for safety), unless you change C«->» to C«->».
-When translating, inspect the use of the loop variable to decide if read-write is needed.
+In Perl 6, that alias is read-only (for safety), unless you change C«->» to
+C«<->».  When translating, inspect the use of the loop variable to decide if
+read-write is needed.
 
     for my $car (@cars)  {...} # Perl 5; read-write
     for @cars  -> $car   {...} # Perl 6; read-only
@@ -547,7 +761,8 @@ require you to add the optional C<m> on a plain match like C«/abc/».
 
 =head3 Add :P5 or :Perl5 adverb
 
-If the actual regex is complex, you may want to use it as-is, by adding the C<P5> modifier.
+If the actual regex is complex, you may want to use it as-is, by adding the
+C<P5> modifier.
 
     next if $line =~    m/[aeiou]/   ; # Perl 5
     next if $line ~~ m:P5/[aeiou]/   ; # Perl 6, using P5 modifier
@@ -575,19 +790,20 @@ For look-around assertions:
 
 =item C<(?=[abc])> becomes C«<?[abc]>»
 
-=item C<(?=ar?bitrary* pattern)> becomes C«<before ar?bitrary pattern>»
+=item C<(?=ar?bitrary* pattern)> becomes C«<before ar?bitrary* pattern>»
 
 =item C<(?!=[abc])> becomes C«<![abc]>»
 
-=item C<(?!=ar?bitrary* pattern)> becomes C«<!before ar?bitrary pattern>»
+=item C<(?!=ar?bitrary* pattern)> becomes C«<!before ar?bitrary* pattern>»
 
-=item C«(?<=ar?bitrary* pattern)» becomes C«<after ar?bitrary pattern>»
+=item C«(?<=ar?bitrary* pattern)» becomes C«<after ar?bitrary* pattern>»
 
-=item C«(?<!ar?bitrary* pattern)» becomes C«<!after ar?bitrary pattern>»
+=item C«(?<!ar?bitrary* pattern)» becomes C«<!after ar?bitrary* pattern>»
 
-(Unrelated to <> syntax, the "lookaround" C</foo\Kbar/> becomes C</foo <( bar /> )>
+(Unrelated to <> syntax, the "lookaround" C</foo\Kbar/> becomes C«/foo <( bar )> /»
 
-=item C<(?(?{condition))yes-pattern|no-pattern)> becomes C«[ <?{condition}> yes-pattern | no-pattern ]»
+=item C<(?(?{condition))yes-pattern|no-pattern)> becomes C«[ <?{condition}>
+      yes-pattern | no-pattern ]»
 
 =head3 Longest token matching (LTM) displaces alternation
 
@@ -606,8 +822,6 @@ TODO more rules. Use C<translate_regex.pl> from Blue Tiger in the meantime.
 
 Strict mode is now on by default.
 
-(XXX C<no strict> will work someday, but NYI?)
-
 =head4 C<warnings>
 
 Warnings are now on by default.
@@ -617,7 +831,7 @@ Warnings are now on by default.
 =head4 C<autodie>
 
 The functions which were altered by C<autodie> to throw exceptions on
-error, now throw exceptions by default.
+error, now throw exceptions by default unless you test the return value explicitly.
 
     # Perl 5
     open my $i_fh, '<', $input_path;  # Fails silently on error
@@ -645,7 +859,10 @@ C<is> keyword, in the class declaration.
 
 No longer relevant.
 
-Perl 6 now transparently upgrades Int Num Rat to their Big versions as needed.
+C<Int> is now arbitrary precision, as is the numerator of C<Rat> (the
+denominator is limited to C<2**64>, after which it will automatically
+upgrade to C<Num> to preserve performance).  If you want a C<Rat> with
+an arbitrary-precision denominator, C<FatRat> is available.
 
 =head4 C<constant>
 
@@ -765,7 +982,7 @@ Gone.
 The Perl 6 design allows for automatic transparent saving-and-loading of
 compiled bytecode.
 
-No Perl 6 compiler supports it yet.
+Rakudo supports this only for modules so far.
 
 
 
@@ -949,3 +1166,5 @@ add it to the document, even if we don't have a good answer yet. That will
 be better than losing the information about a real need.
 
 =end comments
+
+# vim: expandtab shiftwidth=4 ft=perl6
