--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -232,7 +232,7 @@ supplies: they can come as L<multis|#Multi-dispatch>,
 you can L<wrap|/type/Routine#method wrap> them, and exit early with C<return>:
 
 =begin code :allow<B>
-my $keywords = set <if for unless while for>;
+my $keywords = set <if for unless while>;
 
 sub has-keyword(*@words) {
     for @words -> $word {
@@ -536,5 +536,29 @@ class LoggedVersion is Version {
 
 say LoggedVersion.new('1.0.2');
 =end code
+
+=head1 Coercion Types
+
+Coercion types can help you to have a specific type inside a routine, but
+accept wider input. When the routine is called, the argument is automatically
+converted to the narrower type.
+
+=begin code
+sub double(Int(Cool) $x) {
+    2 * $x
+}
+
+say double '21';    # 42
+say dobule Any;     # Type check failed in binding $x; expected 'Cool' but got 'Any'
+=end code
+
+Here the C<Int> is the target type to which the argument will be coerced, and
+C<Cool> is the type that the routine accepts as input.
+
+If the accepted input type is L<Any|/type/Any>, you can abbreviate C<Int(Any)>
+to C<Int()>.
+
+Coercion types are supposed to work wherever types work, but Rakudo currently
+(2015.02) only implements them for subroutine paramters.
 
 =end pod
