--- a/perl6/doc/lib/Language/io.pod
+++ b/perl6/doc/lib/Language/io.pod
@@ -37,10 +37,16 @@ the file for you.
 
 To write data to a file, again we have the choice of the traditional method
 of calling the C<open> function -- this time with the C<:w> (write) option
--- and spurting the data to the file:
+-- and printing the data to the file:
 
     my $fh = open "testfile", :w;
-    spurt $fh, "data and stuff\n";
+    $fh.print("data and stuff\n");
+    $fh.close;
+
+Or equivalently with C<say>, thus the explicit newline is no longer necessary:
+
+    my $fh = open "testfile", :w;
+    $fh.say("data and stuff");
     $fh.close;
 
 We can simplify this by using C<spurt> to open the file in write mode,
@@ -57,10 +63,16 @@ To append to a file, one can specify the C<:a> option when opening the file
 handle explicitly,
 
     my $fh = open "testfile", :a;
-    spurt $fh "more data\n";
+    $fh.print("more data\n");
     $fh.close;
 
-or with the C<:append> option in the call to C<spurt>:
+or equivalently with C<say>, thus the explicit newline is no longer necessary,
+
+    my $fh = open "testfile", :a;
+    $fh.say("more data");
+    $fh.close;
+
+or even simpler with the C<:append> option in the call to C<spurt>:
 
     spurt "testfile", "more data\n", :append;
 
@@ -150,4 +162,4 @@ TODO: http://doc.perl6.org/type/IO::Handle has close but no open
 
 =end pod
 
-# vim: expandtab
+# vim: expandtab shiftwidth=4 ft=perl6
