--- a/perl6/doc/lib/Type/IO/Path.pod
+++ b/perl6/doc/lib/Type/IO/Path.pod
@@ -45,7 +45,7 @@ Retturns the absolute path as a string.
     method basename(IO::Path:D)
 
 Returns the basename part of the path object. That is, it returns the name of
-the file relative to to its directory.
+the file relative to its directory.
 
     say IO::Path.new("/etc/passwd").basename;   # passwd
 
@@ -161,3 +161,5 @@ Changes the POSIX permissions of a file to C<$mode>.
     $*CWD.chmod(0o700);
 
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
