--- a/perl6/doc/lib/Type/Mu.pod
+++ b/perl6/doc/lib/Type/Mu.pod
@@ -137,6 +137,34 @@ Returns an object of type L<ObjAt> which uniquely identifies the object.
 Value types override this method which makes sure that two equivalent objects
 return the same return value from C<WHICH>.
 
+=head2 method WHERE
+
+    method WHERE() returns Int
+
+Returns an C<Int> representing the memory address of the object.
+
+=head2 method WHY
+
+    multi method WHY()
+
+Returns the attached Pod value.  For instance,
+
+=for code
+    sub cast(Spell $s)
+    #= Initiate a specified spell normally
+    #= (do not use for class 7 spells)
+    {
+	do-raw-magic($s);
+    }
+    say &cast.WHY;
+
+prints
+
+    Initiate a specified spell normally (do not use for class 7 spells)
+
+See the L<documentation specification|http://design.perl6.org/S26.html> for
+details about attaching Pod to variables, classes, functions, methods, etc.
+
 =head2 trait is export
 
     multi sub trait_mod:<is>(Mu:U \type, :$export!)
