git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "b481d52"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "b481d52"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -971,7 +971,35 @@ Removed. See S19.
 This is now the default behavior.
 
 
+=head2 File-related operations
 
+=head3 Reading the lines of a text file into an array
+
+In Perl 5, a common idiom for reading the lines of a text file goes
+something like this:
+
+    open my $fh, "<", "file" or die "$!";
+    my @lines = <$fh>;
+    close $fh;
+
+In Perl 6, this has been simplified to
+
+    my @lines = "file".IO.lines;
+
+Do I<not> be tempted to try slurping in a file and splitting the resulting
+string on newlines as this will give an array with a trailing empty element,
+which is one more than you probably expect (it's also more complicated),
+e.g.:
+
+    # initialize the file to read
+    spurt "test-file", q:to/END/;
+    first line
+    second line
+    third line
+    END
+    # read the file
+    my @lines = "test-file".IO.slurp.split(/\n/);
+    say @lines.elems;    #-> 4
 
 =head2 Misc.
 
@@ -983,8 +1011,6 @@ The Perl 6 design allows for automatic transparent saving-and-loading of
 compiled bytecode.
 
 Rakudo supports this only for modules so far.
-
-
 
 
 =head2 Core modules
