--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -373,4 +373,11 @@ The return value is of L<type Proc::Status|/type/Proc::Status>.
 
     shell 'ls -lR | gzip -9 > ls-lR.gz';
 
+=head1 Related classes
+
+See also the related classes L<IO::FileTestable>, L<IO::Handle> and
+L<IO::Path>.
+
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
