--- a/perl6/doc/lib/Type/IO/FileTestable.pod
+++ b/perl6/doc/lib/Type/IO/FileTestable.pod
@@ -118,6 +118,11 @@ or more readably:
     my $change_time = DateTime.new($chnge_instant);
     say $change_time;         # e.g. 2015-02-16T12:18:50Z
 
+=head1 Related roles and classes
+
+See also the related role L<IO> and the related classes L<IO::Handle> and
+L<IO::Path>.
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
