--- a/perl6/doc/lib/Type/IO/Handle.pod
+++ b/perl6/doc/lib/Type/IO/Handle.pod
@@ -79,6 +79,11 @@ Will close a previously opened filehandle.
 
     $fh.close;
 
+=head1 Related roles and classes
+
+See also the related role L<IO> and the related classes L<IO::FileTestable>
+and L<IO::Path>.
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
