--- a/perl6/doc/lib/Type/IO/Path.pod
+++ b/perl6/doc/lib/Type/IO/Path.pod
@@ -160,6 +160,11 @@ Changes the POSIX permissions of a file to C<$mode>.
 
     $*CWD.chmod(0o700);
 
+=head1 Related roles and classes
+
+See also the related role L<IO> and the related classes L<IO::FileTestable>
+and L<IO::Handle>.
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
